--- a/css/styles.css
+++ b/css/styles.css
@@ -12,8 +12,9 @@
   --accent-background-color: #188ce8;
   --main-icons-color: #afb1b8;
   --footer-background-color: #2f303a;
-  --border-color--: #eeeeee;
-  --border-secondary-color--: #ececec;
+  --border-color: #eeeeee;
+  --border-secondary-color: #ececec;
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
@@ -58,6 +59,7 @@ img {
   display: block;
   width: 100%;
   height: auto;
+  margin: 0px;
 }
 
 .header-content {
@@ -65,9 +67,9 @@ img {
   display: flex;
   align-items: center;
   width: 1600px;
-  padding-top: 24px;
-  padding-bottom: 25px;
-  border-bottom: 1px solid var(--border-secondary-color--);
+  /* padding-top: 24px;
+  padding-bottom: 25px; */
+  border-bottom: 1px solid var(--border-secondary-color);
 }
 
 .header-content .flexbox {
@@ -104,19 +106,42 @@ img {
   /* align-items: center; */
 }
 
+.nav-item {
+  position: relative;
+  align-items: center;
+  justify-content: center;
+}
+
 .nav-item:not(:last-child) {
   margin-right: 50px;
 }
 
 .nav-link {
+  position: relative;
   display: block;
-  /* padding-top: 32px;
-  padding-bottom: 32px; */
+  padding-top: 32px;
+  padding-bottom: 32px;
   color: var(--main-text-color);
 
   font-weight: 500;
   line-height: 16px;
   letter-spacing: 0.02em;
+
+  transition: color 250ms var(--timing-function);
+}
+
+.nav-link.active-status::after {
+  content: "";
+
+  position: absolute;
+  left: 0;
+  bottom: 0;
+
+  display: block;
+  width: 100%;
+  height: 4px;
+  background: var(--accent-color);
+  border-radius: 2px;
 }
 
 .nav-link:hover,
@@ -307,16 +332,15 @@ img {
 
 .doing-item {
   width: calc((100%-30px * 2) / 3);
+}
+
+.doingbox {
   position: relative;
 }
 
 .doing-item:not(:nth-child(3n)) {
   margin-right: 30px;
 }
-
-/* .doing-img {
-  position: relative;
-} */
 
 .doing-title {
   position: absolute;
@@ -414,6 +438,10 @@ img {
   width: 44px;
   height: 44px;
   fill: var(--secondary-text-color);
+
+  transition: background-color 250ms var(--timing-function),
+    fill 250ms var(--timing-function),
+    border-radius 250ms var(--timing-function);
 }
 
 .foter-links .sociallink,
@@ -466,6 +494,9 @@ img {
   fill: var(--main-icons-color);
   border: 1px solid var(--main-icons-color);
   border-radius: 4px;
+
+  transition: fill 250ms var(--timing-function),
+    border-color 250ms var(--timing-function);
 }
 
 .customer-link:hover,
@@ -507,6 +538,9 @@ img {
   font-weight: 500;
   line-height: 16px;
   letter-spacing: 0.02em;
+
+  transition: color 250ms var(--timing-function),
+    tet-shadow 250ms var(--timing-function);
 }
 
 .nav-link:hover,
@@ -526,6 +560,8 @@ img {
   font-style: normal;
   font-weight: 500;
   text-decoration: none;
+
+  transition: color 250ms var(--timing-function);
 }
 
 .contact-link:hover,
@@ -540,6 +576,7 @@ img {
 .work-buttons {
   /* width: 74px; */
   height: 38px;
+  margin-bottom: 15px;
   text-align: center;
   font-weight: 500;
   font-size: 16px;
@@ -548,20 +585,18 @@ img {
   border-radius: 4px;
   border: 0px;
   shadow: none;
-  margin-bottom: 15px;
+
+  transition: color 250ms var(--timing-function),
+    background-color 250ms var(--timing-function),
+    box-shadow 250ms var(--timing-function);
 }
 
 .work-buttons:hover,
 .work-buttons:focus {
-  /* width: 145px; */
-  height: 38px;
   color: var(--white-color);
-  text-align: center;
-  font-weight: 500;
-  align-items: center;
+
   background-color: var(--accent-background-color);
   box-shadow: 0px 4px 4px var(--box-shadow-color);
-  border-radius: 4px;
 }
 
 .filters-gallery-list {
@@ -596,10 +631,12 @@ img {
   width: 370px;
   margin-bottom: 30px;
   padding-bottom: 20px;
-  border: 1px solid var(--border-color--);
+  border: 1px solid var(--border-color);
+
+  transition: box-shadow 250ms var(--timing-function);
 
   /* overflow: hidden;
-  transition: box-shadow */
+  */
 }
 
 .gallery-item:hover,
@@ -608,9 +645,9 @@ img {
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.gallery-list img {
+/* .gallery-list img {
   margin-bottom: 20px;
-}
+} */
 .gallery-item:nth-last-child(-n + 3) {
   margin-bottom: 0px;
 }
@@ -620,15 +657,52 @@ img {
 }
 
 .gallery-title {
-  color: var(--rare-text-color);
-  font-weight: 700;
   margin-top: 0;
   margin-bottom: 15px;
-  line-height: 16px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 36px;
+  letter-spacing: 0.06em;
+  color: var(--rare-text-color);
 }
 
 .gallery-info {
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.03em;
+  color: var(--secondary-text-color);
+}
+
+.project-card {
+  position: relative;
+  overflow: hidden;
+}
+
+.card-description {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  padding: 36px 24px;
+  background-color: rgba(33, 150, 243, 0.9);
+  opacity: 0;
+  transform: translateY(100%);
+  transition: transform 250ms var(--timing-function),
+    opacity 250ms var(--timing-function);
+}
+
+.description {
   margin: 0;
+  font-size: 18px;
+  line-height: 28px;
+  color: var(--white-color);
+}
+
+.project-link:hover .card-description,
+.project-link:focus .card-description {
+  transform: translateY(0);
+  opacity: 1;
 }
 
 .footer {
@@ -684,4 +758,63 @@ img {
   display: flexbox;
   flex-direction: column;
   width: 210px;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+
+  transition: opacity 250ms var(--timing-function);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  padding: 40px;
+
+  width: 528px;
+  height: 580px;
+  background-color: var(--white-color);
+
+  transform: translate(-50% -50%);
+}
+
+.is-hidden .modal {
+  right: -100%;
+  transform: translateY(-50%) scale(0.3);
+}
+
+.closebtn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translateX(-8px) translateY(8px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: var(--white-color);
+  fill: var(--rare-text-color);
+
+  transition: fill 250ms var(--timing-function);
+}
+
+.closebtn:hover,
+.closebtn:focus {
+  fill: var(--accent-color);
+  outline: transparent;
 }
