--- a/css/styles.css
+++ b/css/styles.css
@@ -342,23 +342,31 @@ img {
   margin-right: 30px;
 }
 
-.doing-title {
+.doingbox-title {
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
+  /* height: 70px; */
   margin: 0;
   padding-top: 27px;
   padding-bottom: 27px;
+  text-align: center;
+  justify-content: center;
+
+  background: rgba(47, 48, 58, 0.8);
+}
+
+.doing-title {
+  margin: 0;
   font-style: normal;
   font-weight: bold;
   font-size: 14px;
   line-height: 16px;
-  text-align: center;
+
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--white-color);
-  background: rgba(47, 48, 58, 0.8);
 }
 
 .team {
